# Halcon_DaHeng

./: .gitignore  BUILD_LINUX.md  CMakeLists.txt  Halcon_DaHeng.h  LICENSE  README.md
.claude/: settings.local.json
3rd/daheng/inc/: DxImageProc.h  GXDef.h  GXErrorList.h  GxIAPI.h  GxIAPILegacy.h  GxPixelFormat.h
3rd/daheng/inc_linux/: DxImageProc.h  GXDef.h  GxIAPI.h  GxIAPILegacy.h
3rd/daheng/lib/x64/: DxImageProc.lib  GxIAPI.lib
3rd/daheng/lib/x86/: DxImageProc.lib  GxIAPI.lib
build-linux/: HCPPHalcon_DaHeng.cpp  HCPPHalcon_DaHeng.h  HHalcon_DaHeng.c
build-linux/doc/html/reference/: DHGXGetLogType.html  index.html  legal_notes.html
build-linux/help/: operators_en_US.idx  operators_en_US.key  operators_en_US.num
def/: Halcon_DaHeng.def
doc/html/reference/: CGXSetCommandValue.html  DHGXCloseLib.html  DHGXGetFloatValue.html  DHGXGetIntValue.html  DHGXGetLastError.html  DHGXOPenCameraByID.html  DHGXSetCommandValue.html  DHGXSetFloatValue.html  DHGXSetIntValue.html  GXSetLogType.html  HHalconDaHeng.html  index_by_name.html  index_classes.html
examples/: 大恒.hdev
help/: operators_en_US.ref  operators_en_US.sta
include/: Halcon_DaHeng.h
source/: Halcon_DaHeng.c  Halcon_DaHeng.cpp
